# omnistat

./: .gitignore  CHANGES  LICENSE  README.md  VERSION  annotate.py  build.sh  collector.py  collector_base.py  collector_rocm_smi.py  collector_rocprofiler.py  collector_rocprofiler2.py  collector_slurm.py  collector_smi.py  collector_smi_process.py  collector_smi_v2.py  collectors.py  monitor.py  node_monitoring.py  node_monitoring.spec  omni_util.py  omnistat-annotate  omnistat-import  omnistat-monitor  omnistat-query  omnistat-rms-env  omnistat-slurm-env  omnistat-standalone  omnistat-usermode  omnistat.service  omniwatch.config  omniwatch.default  omniwatch.ornl  omniwatch.service  omniwatch.spec  pyproject.toml  query.py  requirements-query.txt  requirements-standalone.txt  requirements.txt  (+4 more)
.github/workflows/: docs.yml  formatting.yml  test-query.yml  test-user-pull.yml  test-user-push.yml  test-user.yml  test.yml
.github/workflows/deprecated/: test-user-pull.yml
docker/: Dockerfile  Dockerfile.loader  Dockerfile.victoriametrics  README.md  compose.prometheus.yaml  compose.yaml  entrypoint-loader.sh  entrypoint-victoriametrics.sh  entrypoint.sh  index.py  load.sh  loader.sh  vmloader.sh
docker/data/: README.md
docker/data.d/: README.md
docker/grafana/dashboards/: omnistat.yml  omniwatch.yml
docker/grafana/datasources/: datasource.yml
docker/grafana/datasources-prometheus/: datasource.yml
docker/grafana/json-models/: index.json  index.prometheus.json  job-tracing.json  job.json  omniwatch-index.json  omniwatch-job.json
docker/jobs/: README.md
docker/slurm/: README.md  compose.yaml  docker-entrypoint.sh  prometheus.yml
docker/usermode/grafana/datasources/: datasource.yml
docker/usermode/grafana/json-models/: index.json  job.json
docker/victoria-metrics-data/: README.md
docs/: README  conf.py  grafana.md  index.md  installation.md  introduction.md  metrics.md  requirements-docs.txt  sites.md
docs/developer/: collector_uptime.py  developers.md
docs/installation/: index.md  installation.md  omnistat.service  system-install.md  user-mode.md
grafana/: Makefile  README.md  filter-dashboard
grafana/json-models/: Makefile  filter-dashboard  make-standalone  ras-summary.json  rms-global.json  rms-job.json  rms-node.json  slurm-global.json  slurm-job.json  standalone-global.json  standalone-node.json  standalone.json
grafana/json-models/docker/: global.json  job.json
grafana/json-models/rms-copy/: rms-global.json  rms-job.json  rms-node.json
grafana/json-models/system/: rms-global.json  rms-job.json  rms-node.json  standalone-global.json  standalone-node.json
grafana/json-models/user/: job.json
grafana/scripts/: filter-dashboard  sync-dashboards
grafana/source/: global.json  job.json  node.json
misc/: omnistat-ornl  omnistat-start-ornl  omnistat-stop-ornl
omnistat/: annotate.py  collector_base.py  collector_events.py  collector_network.py  collector_pm_counters.py  collector_rms.py  collector_rms_v2.py  collector_rocprofiler.py  collector_slurm.py  collector_smi.py  collector_smi_process.py  collector_smi_v2.py  job_metrics_collector.py  monitor.py  node_monitoring.py  omni_util.py  query.py  rms_env.py  slurm_env.py  sqlite_mpi.py  sqlite_mpi2.py  sqlite_utils.py  standalone.py  trace.py  utils.py
omnistat/config/: omnistat.default  omnistat.m2m  omnistat.ornl
omnistat/trace/: importer.py  pytorch.py
omniwatch/: annotate.py  collector_rocm_smi.py  collector_slurm.py  collector_smi.py  collector_smi_process.py  collector_smi_v2.py  monitor.py  node_monitoring.py  omni_util.py  query.py  slurm_env.py  utils.py
omniwatch/config/: omniwatch.default  omniwatch.ornl
pmc-collector/: CMakeLists.txt  README.md  main.cpp
pyrocprofiler/: CMakeLists.txt  README.md  device_session.hpp  device_session_py_type.cpp  device_session_py_type.h  pyrocprofiler_module.cpp  setup.py
slurm/: Dockerfile  compose.yaml  docker-entrypoint.sh  slurm.conf
test/: README.md  config.py  requirements.txt  test_client.py  test_integration.py  test_job_system.py  test_job_user.py  test_job_user_pull.py  test_job_user_push.py  test_query.config  test_query.py  trace_generator.py
test/docker/slurm/: Dockerfile  README.md  compose-user.yaml  compose.yaml  docker-entrypoint.sh  omnistat-system.config  omnistat-user.config  omnistat.slurm  omniwatch.slurm  prometheus.yml  slurm-epilog.sh  slurm-prolog.sh  slurm.conf
test/docker/victoriametrics/: .compose.yaml.swp  compose.yaml
tools/: prometheus-flush.go
