[project]
name = "omniwatch"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "pyyaml",
    "importlib-metadata",
    "Flask>=2.3.2",
    "flask_prometheus_metrics>=1.0.0",
    "prometheus_client>=0.17.0",
    "gunicorn>=21.2.0",
    "parallel-ssh>=2.12.0",
]

[project.optional-dependencies]
query = [
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "prometheus-api-client>=0.5.4",
    "reportlab>=4.0.5",
]

[project.scripts]
omniwatch-util = "omniwatch.omni_util:main"
omniwatch-annotate = "omniwatch.annotate:main"
omniwatch-query = "omniwatch.query:main"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omniwatch"]

[tool.setuptools.package-data]
"omniwatch" = ["config/omniwatch.default"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}+git.{sha}"
dirty_template = "{tag}+git.{sha}.uncommitted"

[tool.black]
line-length = 120
include = '\.py$'
