[project]
name = "omniwatch"
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
requires-python = ">=3.8,<3.11"

[project.scripts]
omniwatch-util = "omniwatch.omni_util:main"
omniwatch-annotate = "omniwatch.annotate:main"
omniwatch-query = "omniwatch.query:main"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omniwatch"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { query = { file = ["requirements-query.txt"] } }

[tool.setuptools.package-data]
"omniwatch" = ["config/omniwatch.default"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}+git.{sha}"
dirty_template = "{tag}+git.{sha}.uncommitted"

[tool.black]
line-length = 120
include = '\.py$'
