[project]
name = "omnistat"
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
requires-python = ">=3.8,<3.11"

[project.scripts]
omnistat-util = "omnistat.omni_util:main"
omnistat-annotate = "omnistat.annotate:main"
omnistat-query = "omnistat.query:main"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omnistat"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { query = { file = ["requirements-query.txt"] } }

[tool.setuptools.package-data]
"omnistat" = ["config/omnistat.default"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}+git.{sha}"
dirty_template = "{tag}+git.{sha}.uncommitted"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning::", # ignore third-party deprecation warnings
    "default::DeprecationWarning:omnistat.*:",
]

[tool.black]
line-length = 120
include = '\.py$'
